--- a/html-files(delete-later)/litheum-bco/index.html
+++ b/html-files(delete-later)/litheum-bco/index.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../css/global.css" />
     <link rel="stylesheet" href="./index.css" />
+
+    <!-- <script src="https://cdn.jsdelivr.net/npm/ethers/dist/ethers.umd.min.js"></script> -->
+    <!-- <script type="text/javascript" src="https://unpkg.com/@walletconnect/web3-provider@2.8.5/dist/index.umd.js"></script> -->
+    <!-- <script type="text/javascript" src="https://unpkg.com/@walletconnect/web3-provider@1.2.1/dist/umd/index.min.js"></script> -->
+  <!-- <script src="https://cdn.jsdelivr.net/npm/@web3modal/standalone@2/dist/index.js"></script> -->
+  <!-- <script src="https://unpkg.com/web3modal@1.9.0/dist/index.js"></script> -->
     <title>Pre Bco</title>
   </head>
   <body>
@@ -60,8 +66,40 @@
                 <p class="paid">you send*:</p>
                 <p class="amount">887.4</p>
                 <p class="max">
-                  Max Slippage: 2% <span class="edit">(edit)</span>
+                  Max Slippage: 2% <span onclick="showSlippage()" class="edit">(edit)</span>
                 </p>
+
+                <div id="slippage-dd" class="editing-popup">
+                  <div class="percentage">
+                    <p>0.0 %</p>
+                  </div>
+                  <div class="percentage">
+                    <p>0.5 %</p>
+                  </div>
+                  <div class="percentage">
+                    <p>1.0 %</p>
+                  </div>
+                  <div class="percentage">
+                    <p>1.5 %</p>
+                  </div>
+                  <div class="percentage">
+                    <p>2.0 %</p>
+                  </div>
+                  <div class="percentage">
+                    <p>2.5 %</p>
+                  </div>
+                  <div class="percentage">
+                    <p>3.0 %</p>
+                  </div>
+                  <div class="btn-container">
+                    <p class="lost-fee">
+                      *a lower slippage may result in revert() and lost gas fee
+                    </p>
+                    <button class="close-btn">
+                      <p>Close</p>
+                    </button>
+                  </div>
+                </div>
               </div>
               <div class="second-content">
                 <div class="currency">
@@ -97,4 +135,6 @@
       </div>
     </div>
   </body>
+  <script src="script.js" type="text/javascript"></script>
+  <script src="main.js" type="module"></script>
 </html>
