Added types and reverse swap integration

--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
         </div>
         <button class="swap-btn" id="open-connect-modal">CONNECT WALLET</button>
         <button class="swap-btn" id="swap">SWAP</button>
+        <button class="swap-btn" id="reverse-swap">REVERSE SWAP</button>
         <!-- <button class="swap-btn" id="open-network-modal">Open Networks</button> -->
       </div>
       <div class="info">
