completed rest of the changes

--- a/admin/index.html
+++ b/admin/index.html
@@ -67,7 +67,7 @@
         <div class="currency-box">
           <div class="first-content">
             <p class="paid">Amount to with draw:</p>
-            <input class="amount" name="usdt-withdraw" id="usdt-withdraw" />
+            <input class="amount" name="usdt-withdraw" id="usdt-withdraw" placeholder="Enter value in ether" />
           </div>
         </div>
 
@@ -94,7 +94,7 @@
         <div class="currency-box">
           <div class="first-content">
             <p class="paid">Set the static price:</p>
-            <input class="amount" name="usdt-for-blth" id="usdt-for-blth" />
+            <input class="amount" name="usdt-for-blth" id="usdt-for-blth" placeholder="Enter value in ether"/>
           </div>
         </div>
 
@@ -114,7 +114,7 @@
         <div class="currency-box">
           <div class="first-content">
             <p class="paid">Limit for the account:</p>
-            <input class="amount" name="wl-limit" id="wl-limit" />
+            <input class="amount" name="wl-limit" id="wl-limit" placeholder="Enter value in ether"/>
           </div>
         </div>
       </div>
