updated the files structure and enhancements

--- a/litheum-bco/index.html
+++ b/litheum-bco/index.html
@@ -8,6 +8,18 @@
     <title>Pre Bco</title>
   </head>
   <body>
+    <div class="popup-bg" id="popup-bg">
+      <div class="token-popup" id="token-popup">
+        <button class="close-icon" onclick="handleCloseTokenPopup()">
+          <img src="../assets/close-icon.svg" alt="Close" />
+        </button>
+        <p class="title">TOKEN RELEASE CURVE</p>
+        <img src="../assets/token-count-graph.svg" class="graph" alt="Graph" />
+        <p class="fee">
+          *a 2% fee for all swaps is collected by Litheum Labs + Gas
+        </p>
+      </div>
+    </div>
     <div class="container">
       <div class="bonding">
         <div class="text-container">
@@ -49,15 +61,48 @@
               </div>
             </div>
           </div>
-          <p class="detail">(Details)</p>
+          <button class="detail-btn" onclick="handleOpenTokenPopup()">
+            <p class="detail">(Details)</p>
+          </button>
         </div>
       </div>
       <div class="box-container">
         <div class="box">
+          <div class="editing-popup-slippage" id="editing-popup-slippage">
+            <div class="percentage">
+              <p>0.0 %</p>
+            </div>
+            <div class="percentage">
+              <p>0.5 %</p>
+            </div>
+            <div class="percentage">
+              <p>1.0 %</p>
+            </div>
+            <div class="percentage">
+              <p>1.5 %</p>
+            </div>
+            <div class="percentage">
+              <p>2.0 %</p>
+            </div>
+            <div class="percentage">
+              <p>2.5 %</p>
+            </div>
+            <div class="percentage">
+              <p>3.0 %</p>
+            </div>
+            <div class="btn-container">
+              <p class="lost-fee">
+                *a lower slippage may result in revert() and lost gas fee
+              </p>
+              <button class="close-btn" onclick="handleCloseDetailsPopup()">
+                <p>Close</p>
+              </button>
+            </div>
+          </div>
           <div class="boxes">
-            <div class="currency-box">
+            <div class="currency-box" id="currency-box">
               <div class="first-content">
-                <p class="paid">you send*:</p>
+                <p class="paid" id="usdt-paid">you send*:</p>
                 <p class="amount">887.4</p>
                 <p class="max">
                   Max Slippage: 2% <span class="edit">(edit)</span>
@@ -71,12 +116,12 @@
                 <p class="balance">BALANCE: 10000 USDT</p>
               </div>
             </div>
-            <div class="arrow">
-              <img src="../assets/arrow-down.svg" alt="Arrow" />
-            </div>
+            <button class="arrow" onclick="swap()">
+              <img src="../assets/arrow-down.svg" id="arrow-img" alt="Arrow" />
+            </button>
             <div class="currency-box">
               <div class="first-content">
-                <p class="paid">TOTAL AVAILABLE FOR YOU:</p>
+                <p class="paid" id="blth-paid">TOTAL AVAILABLE FOR YOU:</p>
                 <p class="amount blth">10000</p>
               </div>
               <div class="second-content">
@@ -88,13 +133,19 @@
               </div>
             </div>
           </div>
-          <button class="swap-btn">SWAP</button>
+          <button class="swap-btn" onclick="swap()">
+            SWAP
+          </button>
         </div>
         <div class="info">
           <p class="tax">*includes 2% fee + gas</p>
-          <p class="detail">(Details)</p>
+          <button class="details-popup-btn" onclick="handleOpenDetailsPopup()">
+            <p class="detail">(Details)</p>
+          </button>
         </div>
       </div>
     </div>
+
+    <script src="./index.js"></script>
   </body>
 </html>
