--- a/html-files(delete-later)/litheum-bco/index.html
+++ b/html-files(delete-later)/litheum-bco/index.html
@@ -3,17 +3,23 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../css/global.css" />
+    <link rel="stylesheet" href="../../public/css/global.css" />
     <link rel="stylesheet" href="./index.css" />
-
-    <!-- <script src="https://cdn.jsdelivr.net/npm/ethers/dist/ethers.umd.min.js"></script> -->
-    <!-- <script type="text/javascript" src="https://unpkg.com/@walletconnect/web3-provider@2.8.5/dist/index.umd.js"></script> -->
-    <!-- <script type="text/javascript" src="https://unpkg.com/@walletconnect/web3-provider@1.2.1/dist/umd/index.min.js"></script> -->
-  <!-- <script src="https://cdn.jsdelivr.net/npm/@web3modal/standalone@2/dist/index.js"></script> -->
-  <!-- <script src="https://unpkg.com/web3modal@1.9.0/dist/index.js"></script> -->
     <title>Pre Bco</title>
   </head>
   <body>
+    <div class="popup-bg" id="popup-bg">
+      <div class="token-popup" id="token-popup">
+        <button class="close-icon" onclick="handleCloseTokenPopup()">
+          <img src="../../public/assets/close-icon.svg" alt="Close" />
+        </button>
+        <p class="title">TOKEN RELEASE CURVE</p>
+        <img src="../../public/assets/token-count-graph.svg" class="graph" alt="Graph" />
+        <p class="fee">
+          *a 2% fee for all swaps is collected by Litheum Labs + Gas
+        </p>
+      </div>
+    </div>
     <div class="container">
       <div class="bonding">
         <div class="text-container">
@@ -31,9 +37,9 @@
             <div class="prize-box">
               <div class="total-supply">
                 <div class="align">
-                  <img src="../assets/supply-line-1.svg" alt="Supply Line" />
+                  <img src="../../public/assets/supply-line-1.svg" alt="Supply Line" />
                   <p class="text-blth">500M BLTH</p>
-                  <img src="../assets/supply-line-2.svg" alt="Supply Line" />
+                  <img src="../../public/assets/supply-line-2.svg" alt="Supply Line" />
                 </div>
                 <p class="text-supply">Total Supply</p>
               </div>
@@ -55,86 +61,91 @@
               </div>
             </div>
           </div>
-          <p class="detail">(Details)</p>
+          <button class="detail-btn" onclick="handleOpenTokenPopup()">
+            <p class="detail">(Details)</p>
+          </button>
         </div>
       </div>
       <div class="box-container">
         <div class="box">
+          <div class="editing-popup-slippage" id="editing-popup-slippage">
+            <div class="percentage">
+              <p>0.0 %</p>
+            </div>
+            <div class="percentage">
+              <p>0.5 %</p>
+            </div>
+            <div class="percentage">
+              <p>1.0 %</p>
+            </div>
+            <div class="percentage">
+              <p>1.5 %</p>
+            </div>
+            <div class="percentage">
+              <p>2.0 %</p>
+            </div>
+            <div class="percentage">
+              <p>2.5 %</p>
+            </div>
+            <div class="percentage">
+              <p>3.0 %</p>
+            </div>
+            <div class="btn-container">
+              <p class="lost-fee">
+                *a lower slippage may result in revert() and lost gas fee
+              </p>
+              <button class="close-btn" onclick="handleCloseDetailsPopup()">
+                <p>Close</p>
+              </button>
+            </div>
+          </div>
           <div class="boxes">
-            <div class="currency-box">
+            <div class="currency-box" id="currency-box">
               <div class="first-content">
-                <p class="paid">you send*:</p>
+                <p class="paid" id="usdt-paid">you send*:</p>
                 <p class="amount">887.4</p>
                 <p class="max">
-                  Max Slippage: 2% <span onclick="showSlippage()" class="edit">(edit)</span>
+                  Max Slippage: 2% <span class="edit">(edit)</span>
                 </p>
-
-                <div id="slippage-dd" class="editing-popup">
-                  <div class="percentage">
-                    <p>0.0 %</p>
-                  </div>
-                  <div class="percentage">
-                    <p>0.5 %</p>
-                  </div>
-                  <div class="percentage">
-                    <p>1.0 %</p>
-                  </div>
-                  <div class="percentage">
-                    <p>1.5 %</p>
-                  </div>
-                  <div class="percentage">
-                    <p>2.0 %</p>
-                  </div>
-                  <div class="percentage">
-                    <p>2.5 %</p>
-                  </div>
-                  <div class="percentage">
-                    <p>3.0 %</p>
-                  </div>
-                  <div class="btn-container">
-                    <p class="lost-fee">
-                      *a lower slippage may result in revert() and lost gas fee
-                    </p>
-                    <button class="close-btn">
-                      <p>Close</p>
-                    </button>
-                  </div>
-                </div>
               </div>
               <div class="second-content">
                 <div class="currency">
-                  <img src="../assets/t-icon.svg" alt="T" />
+                  <img src="../../public/assets/t-icon.svg" alt="T" />
                   <p>USDT</p>
                 </div>
                 <p class="balance">BALANCE: 10000 USDT</p>
               </div>
             </div>
-            <div class="arrow">
-              <img src="../assets/arrow-down.svg" alt="Arrow" />
-            </div>
+            <button class="arrow" onclick="swap()">
+              <img src="../../public/assets/arrow-down.svg" id="arrow-img" alt="Arrow" />
+            </button>
             <div class="currency-box">
               <div class="first-content">
-                <p class="paid">TOTAL AVAILABLE FOR YOU:</p>
+                <p class="paid" id="blth-paid">TOTAL AVAILABLE FOR YOU:</p>
                 <p class="amount blth">10000</p>
               </div>
               <div class="second-content">
                 <div class="currency">
-                  <img src="../assets/litheum-icon.svg" alt="Litheum" />
+                  <img src="../../public/assets/litheum-icon.svg" alt="Litheum" />
                   <p>BLTH</p>
                 </div>
                 <p class="balance">BALANCE: 0 LTH</p>
               </div>
             </div>
           </div>
-          <button class="swap-btn">SWAP</button>
+          <button class="swap-btn" onclick="swap()">
+            SWAP
+          </button>
         </div>
         <div class="info">
           <p class="tax">*includes 2% fee + gas</p>
-          <p class="detail">(Details)</p>
+          <button class="details-popup-btn" onclick="handleOpenDetailsPopup()">
+            <p class="detail">(Details)</p>
+          </button>
         </div>
       </div>
     </div>
+
+    <script src="./index.js"></script>
   </body>
-  <script src="script.js" type="text/javascript"></script>
-  <script src="main.js" type="module"></script>
 </html>
