--- a/html-files(delete-later)/litheum-bco/index.html
+++ b/html-files(delete-later)/litheum-bco/index.html
@@ -14,7 +14,11 @@
           <img src="../../public/assets/close-icon.svg" alt="Close" />
         </button>
         <p class="title">TOKEN RELEASE CURVE</p>
-        <img src="../../public/assets/token-count-graph.svg" class="graph" alt="Graph" />
+        <img
+          src="../../public/assets/token-count-graph.svg"
+          class="graph"
+          alt="Graph"
+        />
         <p class="fee">
           *a 2% fee for all swaps is collected by Litheum Labs + Gas
         </p>
@@ -37,9 +41,15 @@
             <div class="prize-box">
               <div class="total-supply">
                 <div class="align">
-                  <img src="../../public/assets/supply-line-1.svg" alt="Supply Line" />
+                  <img
+                    src="../../public/assets/supply-line-1.svg"
+                    alt="Supply Line"
+                  />
                   <p class="text-blth">500M BLTH</p>
-                  <img src="../../public/assets/supply-line-2.svg" alt="Supply Line" />
+                  <img
+                    src="../../public/assets/supply-line-2.svg"
+                    alt="Supply Line"
+                  />
                 </div>
                 <p class="text-supply">Total Supply</p>
               </div>
@@ -117,7 +127,11 @@
               </div>
             </div>
             <button class="arrow" onclick="swap()">
-              <img src="../../public/assets/arrow-down.svg" id="arrow-img" alt="Arrow" />
+              <img
+                src="../../public/assets/arrow-down.svg"
+                id="arrow-img"
+                alt="Arrow"
+              />
             </button>
             <div class="currency-box">
               <div class="first-content">
@@ -126,16 +140,17 @@
               </div>
               <div class="second-content">
                 <div class="currency">
-                  <img src="../../public/assets/litheum-icon.svg" alt="Litheum" />
+                  <img
+                    src="../../public/assets/litheum-icon.svg"
+                    alt="Litheum"
+                  />
                   <p>BLTH</p>
                 </div>
                 <p class="balance">BALANCE: 0 LTH</p>
               </div>
             </div>
           </div>
-          <button class="swap-btn" onclick="swap()">
-            SWAP
-          </button>
+          <button class="swap-btn" onclick="swap()">SWAP</button>
         </div>
         <div class="info">
           <p class="tax">*includes 2% fee + gas</p>
@@ -147,5 +162,7 @@
     </div>
 
     <script src="./index.js"></script>
+    <script src="script.js" type="text/javascript"></script>
+    <script src="main.js" type="module"></script>
   </body>
 </html>
