--- a/check/index.html
+++ b/check/index.html
@@ -11,7 +11,7 @@
   <body>
     <div class="popup-bg" id="popup-bg">
       <div class="token-popup" id="token-popup">
-        <button class="close-icon" onclick="handleCloseTokenPopup()">
+        <button class="close-icon" id="close-token-popup">
           <img src="../../public/assets/close-icon.svg" alt="Close" />
         </button>
         <p class="title">TOKEN RELEASE CURVE</p>
@@ -122,7 +122,7 @@
               </div>
               <div class="second-content">
                 <div class="currency">
-                  <img src="../../public/assets/t-icon.svg" alt="T" />
+                  <img src="../assets/t-icon.svg" alt="T" />
                   <p>USDT</p>
                 </div>
                 <p class="balance">BALANCE: 10000 USDT</p>
@@ -130,7 +130,7 @@
             </div>
             <button class="arrow" onclick="swap()">
               <img
-                src="../../public/assets/arrow-down.svg"
+                src="../assets/arrow-down.svg"
                 id="arrow-img"
                 alt="Arrow"
               />
@@ -143,7 +143,7 @@
               <div class="second-content">
                 <div class="currency">
                   <img
-                    src="../../public/assets/litheum-icon.svg"
+                    src="../assets/litheum-icon.svg"
                     alt="Litheum"
                   />
                   <p>BLTH</p>
@@ -164,7 +164,7 @@
     </div>
 
     <script src="./index.js"></script>
-    <script src="script.js" type="text/javascript"></script>
-    <script src="main.js" type="module"></script>
+    <!-- <script src="script.js" type="text/javascript"></script>
+    <script src="main.js" type="module"></script> -->
   </body>
 </html>
